# track_on2_stream

./: .gitignore  pyproject.toml
examples/: demo.py
track_on2_stream/: main.py
track_on2_stream/config/: test_dinov2.yaml  test_dinov3.yaml
track_on2_stream/evaluation/: benchmark.py  eval.py  evaluator.py
track_on2_stream/examples/: demo.py  point_registry.py  query_manager.py  run_online.py
track_on2_stream/model/: backbone.py  loss.py  modules.py  prediction_head.py  reranking.py  trackon.py  trackon_predictor.py
track_on2_stream/model/vit_adapter/dinov2_adapter/: dinov2_vit_adapter.py
track_on2_stream/model/vit_adapter/dinov3_adapter/: dinov3_vit_adapter.py
track_on2_stream/utils/: coord_utils.py  train_utils.py
